--- a/project/package.json
+++ b/project/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mysql2": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
@@ -23,6 +24,8 @@
     "react-scripts": "5.0.1",
     "redis": "^4.6.2",
     "redux": "^4.2.0",
+    "sequelize": "^6.28.0",
+    "sequelize-cli": "^6.6.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
