--- a/project/package.json
+++ b/project/package.json
@@ -9,11 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.4",
     "bootstrap": "^5.2.3",
+    "connect-redis": "^6.1.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
