--- a/project/package.json
+++ b/project/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "redis": "^4.6.2",
     "redux": "^4.2.0",
     "sequelize": "^6.28.0",
