--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,16 +1,16 @@
 {
   "development": {
       "host": "127.0.0.1",
-      "database": "instagram",
-      "username": "insta",
-      "password": "insta1234!",
+      "database": "hyostagram",
+      "username": "hyosta",
+      "password": "hyosta1234!",
       "dialect": "mysql"
   },
   "production": {
       "host": "127.0.0.1",
-      "database": "instagram",
-      "username": "insta",
-      "password": "insta1234!",
+      "database": "hyostagram",
+      "username": "hyosta",
+      "password": "hyosta1234!",
       "dialect": "mysql"
   }
 }
