--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "production": "cross-env NODE_ENV=production node index2",
-    "start": "nodemon index2.js"
+    "production": "cross-env NODE_ENV=production node index",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
